[project]
name = "human-eval-fix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-sandbox>=0.0.3",
    "langgraph>=1.0.3",
    "ollama>=0.6.0",
    "pip>=25.3",
]
